--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
               </p>
             </td>
             <td style="padding:5%;width:30%;max-width:30%;vertical-align:top">
-              <img style="width:100%;max-width:100%" alt="profile photo" src="../images/avatar.png">
+              <img style="width:100%;max-width:100%" alt="profile photo" src="../images/avatar.jpg">
               <p>
                 <a href="mailto:hongbowen@ucsb.edu">hongbowen@ucsb.edu</a><br>
                 <a href="https://github.com/whbjzzwjxq">GitHub</a> &nbsp;/&nbsp;
